# currency-converter

./: .env  .gitignore  Dockerfile  README.md  THOUGHTS.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  main.yml  publish.yml
currency_converter/: .env.example  alembic.ini
currency_converter/alembic/versions/: 0001_create_tables.py
currency_converter/app/: exceptions.py  main.py
currency_converter/app/api/: dependencies.py  middlewares.py
currency_converter/app/api/routers/: conversion.py  transactions.py
currency_converter/app/core/: config.py  logging.py
currency_converter/app/schemas/: conversion.py  transaction.py
currency_converter/tests/: README.md  conftest.py
currency_converter/tests/api/: test_conversion.py  test_conversion_api.py  test_transactions.py  test_transactions_api.py
currency_converter/tests/domain/: test_services.py
currency_converter/tests/infrastructure/: test_currency_api.py
currency_converter/tests/repository/: test_transaction_repository.py
currency_converter/tests/service/: test_conversion_service.py  test_transaction_service.py
frontend/: .eslintrc.json  .gitignore  Dockerfile  cypress.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/cypress/e2e/: currency-converter.cy.ts
frontend/cypress/support/: commands.ts  component.ts  e2e.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/__mocks__/: axios.ts
(+45 files in other folders)
