[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = "A FastAPI application for converting currencies and managing transactions."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "currency_converter"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^2.0"
alembic = "^1.7.0"
pydantic = "^1.9.0"
httpx = "^0.23.0"
pytest = "^7.0"
loguru = "^0.5.3"
requests = "^2.31.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.9"
currencyapicom = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ruff = "^0.4.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"